--- a/src/css/index.css
+++ b/src/css/index.css
@@ -13,8 +13,9 @@ html, body {
     width: 100%;
     height: 100%;
     font-family: "regular",sans-serif;
+    overflow: hidden;
 }
- .layer {
+.layer {
      margin: 0;
      padding: 0;
      width: 100%;
@@ -24,7 +25,7 @@ html, body {
      top: 0;
  }
 
- #background {
+#background {
      background-position: center;
      background-size: cover;
      bottom: 0;
@@ -32,36 +33,59 @@ html, body {
      left: 0;
      top: 0;
      position: fixed;
- }
+}
 
- #caption {
-     width: 80%;
-     max-width: 1200px;
-     height: 150px;
-     position: absolute;
-     left: 50%;
-     top: 100%;
-     transform: translate(-50%, -200px);
-     border: 1px solid #ffffff;
-     background: #ffffff88;
-     display: none;
-     font-size: 5vw;
- }
- @media (min-width: 600px) {
- #caption {
+#caption {
+    width: 80%;
+    max-width: 1200px;
+    height: 150px;
+    position: absolute;
+    left: 50%;
+    top: 100%;
+    transform: translate(-50%, -200px);
+    padding: 1vw;
+    border: 1px solid #ffffff;
+    background: #00000088;
+    display: none;
+    font-size: 5vw;
+    color: #ffffff;
+}
+@media (min-width: 600px) {
+#caption {
      font-size: 30px;
- }}
+}}
 
+#cap_next {
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    cursor: pointer;
+    display: none;
+}
 
- #selection {
-     width: 30%;
-     min-width: 300px;
-     height: 300px;
-     position: absolute;
-     left: 50%;
-     top: 50%;
-     transform: translate(-50%, -50%);
-     border: 1px solid #ffffff;
-     background: #ffffff88;
-     display: none;
- }
+#selection {
+    width: 30%;
+    min-width: 300px;
+    /*height: 300px;*/
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1vw;
+    border: 1px solid #ffffff;
+    background: #000000CC;
+    display: none;
+    font-size: 25px;
+    color: #ffffff;
+}
+
+#selection .option {
+    cursor: pointer;
+}
+#selection .option:hover {
+    background: #ffffff40;
+}
+
+#overlay {
+    pointer-events: none;
+}
