--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,19 @@
     font-family: "regular";
     src: url("../apps/rounded-mplus-2c-regular.woff") format("woff");
 }
+@font-face {
+    font-family: "xbox";
+    src: url("../apps/Controller-Microsoft-Xbox-One.woff") format("woff");
+}
+@font-face {
+    font-family: "ps4";
+    src: url("../apps/Controller-Sony-PlayStation-4.woff") format("woff");
+}
+
+@font-face {
+    font-family: "keyboard";
+    src: url("../apps/Keyboard-JP-Regular.woff") format("woff");
+}
 
 html, body {
     margin: 0;
@@ -118,9 +131,95 @@ iframe {
 }
 
 #configPanel {
-    background: #333333;
+    background: #33333300;
     width: 100%;
     position: absolute;
     left: 0;
     top: -100px;
+    text-align: center;
+}
+
+#configPanel button {
+    font-family: "regular",sans-serif;
+    margin: 12px 4px;
+    padding: 6px;
+    min-width: 150px;
+    font-size: 24px;
+    border: 1px solid #999999;
+    border-radius: 8px;
+    filter: drop-shadow(4px 4px 4px #00000040);
+    background-color: #dddddd;
+}
+
+#configPanel button:hover {
+    background-color: #aaaaaa;
+}
+
+#configBody {
+    pointer-events: auto !important;
+    width: 30%;
+    min-width: 400px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1vw;
+    border: 1px solid #ffffff;
+    background: #000000CC;
+    display: none;
+    font-size: 25px;
+    color: #ffffff;
+    text-align: center;
+}
+
+#configBody h2 {
+    font-size: 90%;
+    margin: 0;
+}
+
+#configBody table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 10px auto;
+}
+
+#configBody th, #configBody td {
+    border: 1px solid #aaaaaa;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+#configBody button {
+    font-family: "regular",sans-serif;
+    margin: 12px 4px;
+    padding: 6px;
+    min-width: 150px;
+    font-size: 20px;
+    border: 1px solid #999999;
+    background-color: #dddddd;
+}
+
+#configBody button:hover {
+    background-color: #aaaaaa;
+}
+
+.padButton {
+    font-family: "xbox",sans-serif;
+}
+
+.keyborad {
+    font-family: "keyboard", sans-serif;
+}
+
+.keyConfig {
+    cursor: pointer;
+}
+
+.keyConfig:hover {
+    background-color: #888888;
+}
+
+#configBody td.active {
+    border: 4px solid #ffffff;
+    box-sizing: border-box;
 }
